added sermons collection

--- a/template.conf
+++ b/template.conf
@@ -42,7 +42,8 @@
     "products",
     "gallery",
     "events",
-    "album"
+    "album",
+    "sermons"
   ],
   "systemPartials": [
     "sqs-share-buttons"
