added sermon item and list

--- a/collections/sermons.conf
+++ b/collections/sermons.conf
@@ -12,5 +12,5 @@
     "systemPartials": [
         "sqs-share-buttons"
     ],
-    "supportsVideoBackgrounds": "false"
+    "supportsVideoBackgrounds": "true"
 }
