--- a/template.conf
+++ b/template.conf
@@ -35,7 +35,8 @@
     "mobile-styles.less",
     "tweak.less",
     "ui-icons.less",
-    "util.less"
+    "util.less",
+    "sermons.less"
   ],
   "systemCollections": [
     "blog",
