adjustments to less

--- a/template.conf
+++ b/template.conf
@@ -36,7 +36,8 @@
     "tweak.less",
     "ui-icons.less",
     "util.less",
-    "sermons.less"
+    "hope_util.less",
+    "hope_sermons.less"
   ],
   "systemCollections": [
     "blog",
