--- a/template.conf
+++ b/template.conf
@@ -36,8 +36,9 @@
     "tweak.less",
     "ui-icons.less",
     "util.less",
-    "hope_util.less",
-    "hope_sermons.less"
+    "hope_sermons.less",
+    "hope_util.less"
+    
   ],
   "systemCollections": [
     "blog",
