--- a/template.conf
+++ b/template.conf
@@ -46,7 +46,7 @@
     "gallery",
     "events",
     "album",
-    "sermons"
+    "hope_sermons"
   ],
   "systemPartials": [
     "sqs-share-buttons"
