readded sermons files

--- a/template.conf
+++ b/template.conf
@@ -46,7 +46,8 @@
     "gallery",
     "events",
     "album",
-    "hope_sermons"
+    "sermons",
+    "timeline"
   ],
   "systemPartials": [
     "sqs-share-buttons"
