--- a/collections/timeline.conf
+++ b/collections/timeline.conf
@@ -4,7 +4,7 @@
     "pageSize": 9999,
     "addText": "Add Image or Video",
     "icon": "gallery",
-    "acceptTypes": [
-        "image"
-    ]
+    "acceptTypes": ["image"],
+    "supportsVideoBackgrounds": "false",
+    "supportsImageBackgrounds": "false"
 }
