--- a/template.conf
+++ b/template.conf
@@ -7,6 +7,10 @@
       "regions": [
         "site"
       ]
+    },
+    "hope_layout": {
+      "name": "Hope Layout",
+      "regions": ["hope_layout"]
     }
   },
   "navigations": [
@@ -37,6 +41,7 @@
     "ui-icons.less",
     "util.less",
     "hope_sermons.less",
+    "hope_timeline.less",
     "hope_util.less"
     
   ],
