added hope blog

--- a/template.conf
+++ b/template.conf
@@ -8,9 +8,9 @@
         "site"
       ]
     },
-    "hope_layout": {
-      "name": "Hope Layout",
-      "regions": ["hope_layout"]
+    "hopeBlog": {
+      "name": "Hope Blog",
+      "regions": ["hope_blog"]
     }
   },
   "navigations": [
@@ -53,7 +53,8 @@
     "events",
     "album",
     "sermons",
-    "timeline"
+    "timeline",
+    "hope_blog"
   ],
   "systemPartials": [
     "sqs-share-buttons"
