--- a/template.conf
+++ b/template.conf
@@ -41,7 +41,7 @@
     "ui-icons.less",
     "util.less",
     "hope_sermons.less",
-    "hope_images.less",
+    "hope_blog.less",
     "hope_intro.less",
     "hope_util.less"
     
